plugins {
    id 'java'
    id 'maven-publish'
    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
    id 'com.github.johnrengelman.shadow' version '7.1.0' apply false
    id 'org.screamingsandals.nms-mapper' version '1.1.1' apply false
}

group = 'me.mohamad82'
version = '4.0'
description = 'The ultimate all-in-one cross-platform utils for Minecraft'
compileJava.options.encoding = "UTF-8"

repositories {
    mavenLocal()
    mavenCentral()
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'org.jetbrains.kotlin.jvm'
    apply plugin: 'com.github.johnrengelman.shadow'

    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            url = uri('https://jitpack.io')
        }
        maven {
            url = uri('https://repo.maven.apache.org/maven2/')
        }
    }

    java {
        toolchain.languageVersion = JavaLanguageVersion.of(8)
    }

    dependencies {
        compileOnly 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.10'
    }

    shadowJar {
        archiveClassifier.set('')
    }

    publishing {
        repositories {
            maven {
                name = "GitHubPackages"
                url = "https://maven.pkg.github.com/mohamad82bz/ruom"
                credentials {
                    username = project.findProperty("gpr.user")
                    password = project.findProperty("gpr.key")
                }
            }
        }
    }
}

project(':core') {
    publishing {
        publications {
            gpr(MavenPublication) { publication ->
                groupId 'me.mohamad82'
                artifactId 'ruom-core'
                project.shadow.component(publication)
            }
        }
    }
}

project ('bukkit') {
    publishing {
        publications {
            gpr(MavenPublication) { publication ->
                groupId 'me.mohamad82'
                artifactId 'ruom-bukkit'
                project.shadow.component(publication)
            }
        }
    }
}

project ('velocity') {
    publishing {
        publications {
            gpr(MavenPublication) { publication ->
                groupId 'me.mohamad82'
                artifactId 'ruom-velocity'
                project.shadow.component(publication)
            }
        }
    }
}

project ('bungeecord') {
    publishing {
        publications {
            gpr(MavenPublication) { publication ->
                groupId 'me.mohamad82'
                artifactId 'ruom-bungeecord'
                project.shadow.component(publication)
            }
        }
    }
}